--- a/plugins/Visar/Visar.ui
+++ b/plugins/Visar/Visar.ui
@@ -764,7 +764,7 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+              <iconset>
                <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
              </property>
             </widget>
@@ -1010,10 +1010,12 @@
    <addaction name="actionDoWavelets"/>
    <addaction name="separator"/>
    <addaction name="actionRefreshComboShot"/>
+   <addaction name="actionPrevious"/>
+   <addaction name="actionNext"/>
   </widget>
   <action name="actionSaveTxt">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
    </property>
    <property name="text">
@@ -1025,7 +1027,7 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
    </property>
    <property name="text">
@@ -1037,7 +1039,7 @@
   </action>
   <action name="actionRect3">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
    </property>
    <property name="text">
@@ -1049,7 +1051,7 @@
   </action>
   <action name="actionSaveTxtMultiple">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/saveTxtMultiple.png</normaloff>:/icons/saveTxtMultiple.png</iconset>
    </property>
    <property name="text">
@@ -1061,7 +1063,7 @@
   </action>
   <action name="actionAddVisar">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
    </property>
    <property name="text">
@@ -1073,7 +1075,7 @@
   </action>
   <action name="actionDelVisar">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
    </property>
    <property name="text">
@@ -1082,7 +1084,7 @@
   </action>
   <action name="actionCopyImage">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/copyImage.png</normaloff>:/icons/copyImage.png</iconset>
    </property>
    <property name="text">
@@ -1094,7 +1096,7 @@
   </action>
   <action name="actionRefreshComboShot">
    <property name="icon">
-    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
    </property>
    <property name="text">
@@ -1114,6 +1116,30 @@
    </property>
    <property name="toolTip">
     <string>Filter all VISARs</string>
+   </property>
+  </action>
+  <action name="actionPrevious">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icons/back.png</normaloff>:/icons/back.png</iconset>
+   </property>
+   <property name="text">
+    <string>previous</string>
+   </property>
+   <property name="toolTip">
+    <string>previous in list</string>
+   </property>
+  </action>
+  <action name="actionNext">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icons/forward.png</normaloff>:/icons/forward.png</iconset>
+   </property>
+   <property name="text">
+    <string>next</string>
+   </property>
+   <property name="toolTip">
+    <string>Next in list</string>
    </property>
   </action>
  </widget>
@@ -1163,7 +1189,6 @@
  </tabstops>
  <resources>
   <include location="Visar.qrc"/>
-  <include location="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
