--- a/src/neutrino.ui
+++ b/src/neutrino.ui
@@ -261,7 +261,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>450</width>
+     <width>500</width>
      <height>24</height>
     </rect>
    </property>
@@ -284,6 +284,7 @@
     <addaction name="separator"/>
     <addaction name="actionReopen_to_saved"/>
     <addaction name="actionSave"/>
+    <addaction name="actionSave_numebered_serie"/>
     <addaction name="actionSave_Session"/>
     <addaction name="separator"/>
     <addaction name="actionCopy"/>
@@ -749,7 +750,7 @@
   </action>
   <action name="actionPoint">
    <property name="icon">
-    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
    </property>
    <property name="text">
@@ -769,7 +770,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -782,7 +783,7 @@
   </action>
   <action name="actionPlugin">
    <property name="icon">
-    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/plugin.png</normaloff>:/icons/plugin.png</iconset>
    </property>
    <property name="text">
@@ -804,7 +805,7 @@
   </action>
   <action name="actionTranspose">
    <property name="icon">
-    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
    </property>
    <property name="text">
@@ -931,6 +932,11 @@
     <string>Export all original name</string>
    </property>
   </action>
+  <action name="actionSave_numebered_serie">
+   <property name="text">
+    <string>Save numebered images</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -939,8 +945,6 @@
    <header>../src/graphics/nView.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
