--- a/plugins/Math_operations/Math_operations.ui
+++ b/plugins/Math_operations/Math_operations.ui
@@ -317,6 +317,11 @@
            <string>Scharr</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>Average all</string>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
@@ -412,7 +417,7 @@
     <item row="3" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
-       <enum>Qt::Vertical</enum>
+       <enum>Qt::Orientation::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
